--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.2.7",
-    "@react-navigation/native": "5.1.6",
-    "@react-navigation/stack": "5.2.13",
+    "@react-navigation/compat": "^5.1.18",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.13",
     "eslint-config-standard-react": "9.2.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-check-box": "2.1.7",
     "react-native-gesture-handler": "1.6.1",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "1.8.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.7.0",
