--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-snap-carousel": "3.9.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "6.6.0"
+    "react-native-vector-icons": "6.6.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
